each recipe css

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <h3>Are you studing a Bootcamp<br>so you have no time to think about your meal?</h3>
 
     <a class="button" id="login" href="/recipes">Let's Start!</a> 
-      <i class="frase">Hecho con amor por <a href="https://github.com/IreneCar">Irene</a> y <a href="https://github.com/belendi1999">Belén</a>.</i>
+      <i class="frase">Made with love by <a href="https://github.com/IreneCar">Irene</a> and <a href="https://github.com/belendi1999">Belén</a>.</i>
     
   </section>
 
