--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -264,3 +264,30 @@ body{
   font-size: 18px;
 }
 
+/* ------------ EACH RECIPE ------------ */
+
+.wrapper .recipe-left{
+  width: 60%;
+  background: #DBE3F3;
+  padding: 30px 25px;
+  text-align: center;
+  color: #fff;
+}
+
+.wrapper .recipe-left img{
+ margin-top: 90px;
+}
+
+.wrapper .recipe-right{
+  width: 40%;
+  background: #DBE3F3;
+  padding: 30px 25px;
+}
+
+.wrapper .recipe-right h1{
+  margin-top: 90px;
+}
+
+.wrapper .recipe-m-r{
+  margin-right: 20px;
+}
