--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #E8D5B5;">
         <div class="container-fluid">
-          <img class="logo" src="images/logo-no-fondo.png" alt="logo aguacate">
+          <img class="logo" src="/images/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
