--- a/views/recipes/eachRecipe.hbs
+++ b/views/recipes/eachRecipe.hbs
@@ -1,14 +1,20 @@
-<div class='col'>
-  <div class='card shadow-sm'>
+<div class="wrapper">
+  <div class="recipe-left">
     <img src="{{recipe.image}}" alt="">
-    <p>{{recipe.title}}</p>
-    <p>{{{recipe.summary}}}</p>
-    <form action = "/add-favorite" method="POST">
-      <input type="hidden" name="apiId" value={{recipe.id}}>
-      <input type="hidden" name="title" value="{{recipe.title}}">
-      <input type="hidden" name="summary" value={{recipe.summary}}>
-      <input type="hidden" name="image" value={{recipe.image}}>
-      <button type="submit">Añadir a favoritos</button>
-    </form>
   </div>
+
+  <div class="recipe-right">
+    <div class="recipe-m-r">
+      <h1>{{recipe.title}}</h1>
+      <p>{{{recipe.summary}}}</p>
+      <form action = "/add-favorite" method="POST">
+        <input type="hidden" name="apiId" value={{recipe.id}}>
+        <input type="hidden" name="title" value="{{recipe.title}}">
+        <input type="hidden" name="summary" value={{recipe.summary}}>
+        <input type="hidden" name="image" value={{recipe.image}}>
+        <button class="button" type="submit">Añadir a favoritos</button>
+      </form>
+    </div>
+  </div>
+  
 </div>
