--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -1,4 +1,7 @@
+ <div class='row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'></div>
 {{#each data}}
+ <div class='col'>
+        <div class='card shadow-sm'>
 
 <div>
     <h1>{{this.title}}</h1>
@@ -7,5 +10,9 @@
         <img src="{{this.image}}" alt="">
         </a>
 </div>
+</div>
 
 {{/each}} 
+</div>
+</div>
+
