--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 
   <section class="fondo-text form ">
-    <h3>Are you studing a Bootcamp<br>so you have no time to think about your meal?</h3>
+    <h3>Are you studying a Bootcamp<br>so you have no time to think about your meal?</h3>
 
     <a class="button" id="login" href="/recipes">Let's Start!</a> 
       <i class="frase">Hecho con amor por <a href="https://github.com/IreneCar">Irene</a> y <a href="https://github.com/belendi1999">Belén</a>.</i>
