--- a/views/recipes/list.hbs
+++ b/views/recipes/list.hbs
@@ -14,7 +14,7 @@
     {{#each recipes}}
 
       <div class='col'>
-        <div class='card shadow-sm'>
+        <div class="title-m-t">
           <a class="image" href="recipes/{{this.id}}">
             <img src="{{this.image}}" alt="">
           </a>
