--- a/views/recipes/my-menu.hbs
+++ b/views/recipes/my-menu.hbs
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="table">
+  <table class="table" class="table table-success table-striped">
     <thead>
       <th></th>
       <th>Monday</th>
