--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -3,9 +3,9 @@
   <h1>Choose your favorites recipes!</h1>
 
      <div>
-        <form action="/recipe-search" method="POST">
-        <input type="text" name="search" placeholder="Search for ingredients">
-        <button type="submit">Search</button>
+        <form action="/recipe-search" method="POST" class="d-flex" role="search">
+        <input class="form-control" type="text" name="search" placeholder="Search for ingredients">
+        <button class="btn btn-outline-light" style="border-color: #51145D; color: #51145D;" type="submit">Search</button>
         </form>
       </div>
 
