--- a/views/recipes/favorites.hbs
+++ b/views/recipes/favorites.hbs
@@ -1,22 +1,34 @@
-    
 
-{{#each favorites}}
-  <div class='row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
-    <div class='col'>
-      <div class='card shadow-sm'>
-        <a href="recipes/{{this.apiId}}">
-          <img src="{{image}}" alt="imagen comida">
-        </a>
-        
-        <p>{{title}}</p>
-        
-        <p>{{{summary}}}</p> 
-        
-        <form action = "/delete-favorite" method="POST">
-          <input type="hidden" name="apiId" value={{this.id}}>
-          <button type="submit">Delete favorite</button>
-        </form>
+
+  <div class='container'>
+    <h1>My favorites</h1>
+
+      <div>
+          <form action="/recipe-search" method="POST" class="d-flex" role="search">
+          <input class="form-control" type="text" name="search" placeholder="Search for ingredients">
+          <button class="btn btn-outline-light" style="border-color: #51145D; color: #51145D;" type="submit">Search</button>
+          </form>
       </div>
+
+    <div class='row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
+
+      {{!-- image name status --}}
+      {{#each favorites}}
+
+        <div class='col'>
+          <div class="title-m-t">
+            <a class="image" href="recipes/{{this.apiId}}">
+              <img src="{{image}}" alt="imagen comida">
+            </a>
+          
+            <p>{{title}}</p>
+          
+            <form action = "/delete-favorite" method="POST">
+              <input type="hidden" name="apiId" value={{this.id}}>
+              <button class="button" type="submit">Delete favorite</button>
+            </form>
+          </div>
+        </div>
+      {{/each}}    
     </div>
   </div>
-{{/each}}
