--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
-
-  <section class="fondo-text form ">
+<div class="imagen-bc">
+  <div class="fondo-text form ">
     <h3>Are you studying a Bootcamp<br>so you have no time to think about your meal?</h3>
 
     <a class="button" id="login" href="/recipes">Let's Start!</a> 
       <i class="frase">Made with love by <a href="https://github.com/IreneCar">Irene</a> and <a href="https://github.com/belendi1999">Belén</a>.</i>
     
-  </section>
-
+  </div>
+</div>
 
